2008-08-28  Murray Cumming  <murrayc@murrayc.com>

	* flumotion/component/consumers/disker/disker.glade: Start New File 
	button: Use header capitalization as per the HIG.

2008-08-28  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	* flumotion/ui/wizard.py:
	Revert wizard forward/finish change.
	Fixes #996

2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  Make sure we execute trial for coverage in the built environment.

2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  Make sure we validate the registry.
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/test/test_http.py:
	  Break some lines in preparation for a plug rename.

2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/compat.py:
	  Trigger deprecation on using a function, not importing.  This way
	  we can get a call site that is not in ihooks.py and have a hope
	  of fixing them.

2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/launch/inspect.py:
	  These two lines print the same thing, so might as well show it only
	  once.

2008-08-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/wizard.py (WizardSidebar.jumpToStep): Sidebar is
	in wizard.

2008-08-27  Johan Dahlin  <johan@fluflumotion.com>

	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/videotest/videotest.xml:
	Make the video/audio test component descriptions shorter

2008-08-27  Murray Cumming  <murrayc@murrayc.com>

	* data/glade/shout2-wizard.glade: Changed some labels and added some 
	tooltips to make this slightly less confusing.

2008-08-27  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po:
        Spanish translation sync now.

2008-08-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/fileselector.py (FileSelector._rowActivated):